--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
+
+body {
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+    font-size: 14px; 
+    background: #EEE;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    display: block;
+}
+
 h1 {
     color: firebrick;
     text-decoration-style: dashed
@@ -5,10 +21,33 @@ h1 {
 header {
     display: block; 
     width: 100%;
-    padding: 40px;
-    background: #CCCCCC
 }
+
+nav {
+    width: 100%;
+    background: rgb(88, 75, 79);
+    height: 43px;
+}
+
+nav ul {
+    margin: 0;
+}
+
 li {
     display: inline-block;
     text-decoration: none
+}
+li a:hover {
+    color:green;
+    font-weight: 600;
+}
+li a.active {color: #666666;}
+
+main {
+    background: rgb(52, 50, 51);
+    color: rgb(239, 218, 185);
+}
+
+section {
+    min-height: 500px
 }
